--- a/index.html
+++ b/index.html
@@ -493,9 +493,9 @@
             <h2>Liên Hệ Với Chúng Tôi</h2>
             <div class="contact-content">
                 <div class="contact-info">
-                    <div><i class="fas fa-map-marker-alt"></i><p>Sân Cỏ Ready, TP.HCM</p></div>
-                    <div><i class="fas fa-phone"></i><p>0123 456 789</p></div>
-                    <div><i class="fas fa-envelope"></i><p>info@ready.vn</p></div>
+                    <div><i class="fas fa-map-marker-alt"></i><p>Đội bóng Ready</p></div>
+                    <div><i class="fas fa-phone"></i><p>03969 11286</p></div>
+                    <div><i class="fas fa-envelope"></i><p>ductv112@gmail.com</p></div>
                     <div><i class="fab fa-facebook"></i><p><a href="https://www.facebook.com/groups/880013402123211" target="_blank">facebook.com/groups/readyvn</a></p></div>
                 </div>
                 <form class="contact-form">
@@ -562,4 +562,5 @@
         });
     </script>
 </body>
+
 </html>
