feat: implement random image shuffle system for dynamic content

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ready - Đội bóng anh em từ 2012. Sân 7 Hà Nội. Sẵn sàng từ 2012.">
     <meta name="theme-color" content="#12122b">
-    <title>READY — Sẵn Sàng Từ 2012</title>
+    <title>READY — Sẵn Sàng Từ 2012 🐅</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -75,7 +75,7 @@
             <div class="story__content">
                 <div class="story__block" data-animate="fade-right">
                     <div class="story__image">
-                        <img src="r-image/1.jpg" alt="Anh em đá bóng">
+                        <img src="r-image/2.jpg" alt="Đội hình Ready">
                     </div>
                 </div>
                 <div class="story__block story__block--text" data-animate="fade-left">
@@ -109,7 +109,7 @@
         </div>
     </section>
 
-    <!-- ===================== BROTHERS ===================== -->
+    <!-- ===================== BROTHERS (Đội hình tập thể) ===================== -->
     <section class="brothers" id="brothers">
         <div class="container">
             <header class="section-header" data-animate="fade-up">
@@ -118,78 +118,55 @@
             </header>
 
             <p class="brothers__subtitle" data-animate="fade-up">
-                Hơn 20 anh em, từ nhiều ngành nghề khác nhau, gặp nhau trên sân cỏ mỗi cuối tuần.
-                Không cần biết bạn chơi vị trí nào — chỉ cần có mặt là vui.
+                Những khoảnh khắc đứng cùng nhau dưới màu cờ sắc áo. 14 năm, đội hình có thể thay đổi, nhưng cái tên Ready thì vẫn mãi ở đó.
             </p>
 
             <div class="brothers__collage" data-animate="fade-up">
                 <div class="brothers__photo brothers__photo--lg">
-                    <img src="r-image/2.jpg" alt="Anh em Ready">
-                </div>
-                <div class="brothers__photo brothers__photo--sm">
-                    <img src="r-image/3.jpg" alt="Trên sân cỏ">
-                </div>
-                <div class="brothers__photo brothers__photo--md">
-                    <img src="r-image/4.jpg" alt="Đá bóng cùng nhau">
-                </div>
-                <div class="brothers__photo brothers__photo--sm">
-                    <img src="r-image/5.jpg" alt="Khoảnh khắc vui vẻ">
-                </div>
-                <div class="brothers__photo brothers__photo--md">
-                    <img src="r-image/6.jpg" alt="Sân bóng">
+                    <img src="r-image/1.jpg" alt="Tập thể Ready 1">
                 </div>
                 <div class="brothers__photo brothers__photo--lg">
-                    <img src="r-image/7.jpg" alt="Tinh thần đồng đội">
+                    <img src="r-image/5.jpg" alt="Tập thể Ready 2">
+                </div>
+                <div class="brothers__photo brothers__photo--lg">
+                    <img src="r-image/9.jpg" alt="Tập thể Ready 3">
+                </div>
+                <div class="brothers__photo brothers__photo--lg">
+                    <img src="r-image/12.jpg" alt="Tập thể Ready 4">
                 </div>
             </div>
-
-            <p class="brothers__quote" data-animate="fade-up">
-                "Sân bóng là nơi mọi khác biệt được gác lại,<br>chỉ còn tiếng cười và trái bóng lăn."
-            </p>
         </div>
     </section>
 
-    <!-- ===================== MOMENTS ===================== -->
+    <!-- ===================== MOMENTS (Ăn chơi vui vẻ) ===================== -->
     <section class="moments" id="moments">
         <div class="container">
             <header class="section-header" data-animate="fade-up">
                 <span class="section-header__label">Khoảnh khắc</span>
-                <h2 class="section-header__title">Những Khoảnh Khắc<br><span class="text-accent">Đáng Nhớ</span></h2>
+                <h2 class="section-header__title">Sân Bóng Là Nhà<br><span class="text-accent">Quán Nhậu Là Quê</span></h2>
             </header>
 
             <div class="gallery" data-animate="fade-up">
-                <div class="gallery__item gallery__item--wide">
-                    <img src="r-image/8.jpg" alt="Trận đấu">
-                    <div class="gallery__overlay"><span class="gallery__caption">Những trận cầu nảy lửa</span></div>
-                </div>
-                <div class="gallery__item">
-                    <img src="r-image/9.jpg" alt="Ăn mừng bàn thắng">
-                    <div class="gallery__overlay"><span class="gallery__caption">Bàn thắng & ăn mừng</span></div>
-                </div>
-                <div class="gallery__item">
-                    <img src="r-image/10.jpg" alt="Sân cỏ xanh">
-                    <div class="gallery__overlay"><span class="gallery__caption">Sân cỏ — nhà thứ hai</span></div>
-                </div>
-                <div class="gallery__item gallery__item--tall">
-                    <img src="r-image/11.jpg" alt="Trái bóng">
-                    <div class="gallery__overlay"><span class="gallery__caption">Trái bóng gắn kết</span></div>
-                </div>
-                <div class="gallery__item">
-                    <img src="r-image/12.jpg" alt="Anh em trên sân">
-                    <div class="gallery__overlay"><span class="gallery__caption">Tinh thần anh em</span></div>
-                </div>
-                <div class="gallery__item gallery__item--wide">
-                    <img src="r-image/13.jpg" alt="Sân bóng chiều tà">
-                    <div class="gallery__overlay"><span class="gallery__caption">Chiều cuối tuần trên sân</span></div>
-                </div>
-                <div class="gallery__item">
-                    <img src="r-image/14.jpg" alt="Giày và bóng">
-                    <div class="gallery__overlay"><span class="gallery__caption">Luôn sẵn sàng</span></div>
-                </div>
-                <div class="gallery__item">
-                    <img src="r-image/15.jpg" alt="Đồng đội">
-                    <div class="gallery__overlay"><span class="gallery__caption">Đồng đội là gia đình</span></div>
-                </div>
+                <div class="gallery__item"><img src="r-image/3.jpg" alt="Vui vẻ 1"><div class="gallery__overlay"><span class="gallery__caption">Tạo dáng cực ngầu</span></div></div>
+                <div class="gallery__item"><img src="r-image/4.jpg" alt="Vui vẻ 2"><div class="gallery__overlay"><span class="gallery__caption">Nụ cười chiến thắng</span></div></div>
+                <div class="gallery__item"><img src="r-image/6.jpg" alt="Vui vẻ 3"><div class="gallery__overlay"><span class="gallery__caption">Anh em tình thâm</span></div></div>
+                <div class="gallery__item"><img src="r-image/7.jpg" alt="Vui vẻ 4"><div class="gallery__overlay"><span class="gallery__caption">Hết mình trên sân</span></div></div>
+                <div class="gallery__item"><img src="r-image/8.jpg" alt="Vui vẻ 5"><div class="gallery__overlay"><span class="gallery__caption">Check-in cuối tuần</span></div></div>
+                <div class="gallery__item"><img src="r-image/10.jpg" alt="Vui vẻ 6"><div class="gallery__overlay"><span class="gallery__caption">Pha bóng hài hước</span></div></div>
+                <div class="gallery__item"><img src="r-image/11.jpg" alt="Vui vẻ 7"><div class="gallery__overlay"><span class="gallery__caption">Phút nghỉ giải lao</span></div></div>
+                <div class="gallery__item"><img src="r-image/13.jpg" alt="Vui vẻ 8"><div class="gallery__overlay"><span class="gallery__caption">Nắng vàng sân cỏ</span></div></div>
+                <div class="gallery__item"><img src="r-image/14.jpg" alt="Vui vẻ 9"><div class="gallery__overlay"><span class="gallery__caption">Luôn sẵn sàng</span></div></div>
+                <div class="gallery__item"><img src="r-image/15.jpg" alt="Vui vẻ 10"><div class="gallery__overlay"><span class="gallery__caption">Đồng đội là gia đình</span></div></div>
+                <div class="gallery__item"><img src="r-image/16.jpg" alt="Vui vẻ 11"><div class="gallery__overlay"><span class="gallery__caption">Cùng nhau tỏa sáng</span></div></div>
+                <div class="gallery__item"><img src="r-image/17.jpg" alt="Vui vẻ 12"><div class="gallery__overlay"><span class="gallery__caption">Lên đồ đi đá bóng</span></div></div>
+                <div class="gallery__item"><img src="r-image/18.jpg" alt="Vui vẻ 13"><div class="gallery__overlay"><span class="gallery__caption">Bóng đá & Bạn hữu</span></div></div>
+                <div class="gallery__item"><img src="r-image/19.jpg" alt="Vui vẻ 14"><div class="gallery__overlay"><span class="gallery__caption">Ăn mừng tưng bừng</span></div></div>
+                <div class="gallery__item"><img src="r-image/20.jpg" alt="Vui vẻ 15"><div class="gallery__overlay"><span class="gallery__caption">Khoảnh khắc khó đỡ</span></div></div>
+                <div class="gallery__item"><img src="r-image/21.jpg" alt="Vui vẻ 16"><div class="gallery__overlay"><span class="gallery__caption">Ready Forever</span></div></div>
+                <div class="gallery__item"><img src="r-image/22.jpg" alt="Vui vẻ 17"><div class="gallery__overlay"><span class="gallery__caption">Hết mình vì đam mê</span></div></div>
+                <div class="gallery__item"><img src="r-image/23.jpg" alt="Vui vẻ 18"><div class="gallery__overlay"><span class="gallery__caption">Kỷ niệm khó quên</span></div></div>
+                <div class="gallery__item"><img src="r-image/24.jpg" alt="Vui vẻ 19"><div class="gallery__overlay"><span class="gallery__caption">Tinh thần Ready</span></div></div>
+                <div class="gallery__item"><img src="r-image/25.jpg" alt="Vui vẻ 20"><div class="gallery__overlay"><span class="gallery__caption">Anh em mình là cái gì nào</span></div></div>
             </div>
         </div>
     </section>
