feat: connect Ready Ball Elite to its dedicated online leaderboard

--- a/games.html
+++ b/games.html
@@ -225,7 +225,7 @@
     <script src="js/main.js"></script>
     <script>
         const VIRUS_LORD_URL = 'https://script.google.com/macros/s/AKfycby0DhAbI__D2ju_rHr0SGPqXgmVnRXE_qZ2dvOBk_GEW_dU2350IGQCogG0ofwipQKPwA/exec';
-        const READY_BALL_URL = 'https://script.google.com/macros/s/AKfycbx7E6v_u_7p7E6v_u_7p_placeholder/exec'; // Cập nhật URL sau
+        const READY_BALL_URL = 'https://script.google.com/macros/s/AKfycbxMdRK3n6-e1LCXHJmz8i80InZdmACzM34C1GUvd0IBItwdL8iMJNfdHqYX-9jCR4Qb/exec';
 
         async function fetchTopScores(url, elementId) {
             const list = document.getElementById(elementId);
