--- a/games/ready-ball/index.html
+++ b/games/ready-ball/index.html
@@ -93,8 +93,8 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script>
-        // --- SCRIPT URL (Sếp cần tạo Sheet mới và dán code Apps Script mới vào nhé) ---
-        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbx7E6v_u_7p7E6v_u_7p_placeholder/exec'; // THAY URL MỚI TẠI ĐÂY
+        // --- SCRIPT URL (Sếp đã cung cấp URL mới cho Ready Ball) ---
+        const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxMdRK3n6-e1LCXHJmz8i80InZdmACzM34C1GUvd0IBItwdL8iMJNfdHqYX-9jCR4Qb/exec';
 
         // --- HIGH-END AUDIO ---
         class GameAudio {
