fix: improve mobile touch interaction for start overlay in Ready Ball

--- a/games/ready-ball/index.html
+++ b/games/ready-ball/index.html
@@ -63,11 +63,11 @@
         <div id="high-score">READY ELITE BEST: 0</div>
     </div>
 
-    <div id="overlay" onclick="startGame()">
-        <div style="font-family: 'Orbitron'; color: #0ff; font-size: 12px; letter-spacing: 6px; margin-bottom: 15px;">READY FOOTBALL CLUB</div>
-        <h1 style="color: #fff; font-size: 50px; font-family: 'Orbitron'; text-shadow: 0 0 40px #0ff; margin: 0; text-align: center; font-style: italic; font-weight: 900;">READY BALL</h1>
-        <p style="color: #0ff; letter-spacing: 8px; margin-top: 10px; font-weight: bold; opacity: 0.8; font-size: 14px;">ULTIMATE EDITION</p>
-        <div style="margin-top: 60px; color: #0ff; border: 2px solid #0ff; padding: 15px 40px; border-radius: 100px; font-weight: bold; font-family: 'Orbitron';">CHẠM ĐỂ RA SÂN</div>
+    <div id="overlay" onclick="startGame()" style="cursor: pointer; pointer-events: auto;">
+        <div style="font-family: 'Orbitron'; color: #0ff; font-size: 12px; letter-spacing: 6px; margin-bottom: 15px; pointer-events: none;">READY FOOTBALL CLUB</div>
+        <h1 style="color: #fff; font-size: 50px; font-family: 'Orbitron'; text-shadow: 0 0 40px #0ff; margin: 0; text-align: center; font-style: italic; font-weight: 900; pointer-events: none;">READY BALL</h1>
+        <p style="color: #0ff; letter-spacing: 8px; margin-top: 10px; font-weight: bold; opacity: 0.8; font-size: 14px; pointer-events: none;">ULTIMATE EDITION</p>
+        <div style="margin-top: 60px; color: #0ff; border: 2px solid #0ff; padding: 15px 40px; border-radius: 100px; font-weight: bold; font-family: 'Orbitron'; pointer-events: none;">CHẠM ĐỂ RA SÂN</div>
     </div>
 
     <div id="gameover">
