fix: shorten retry button text to prevent UI overflow on small screens

--- a/games/ready-ball/index.html
+++ b/games/ready-ball/index.html
@@ -114,7 +114,7 @@
             </div>
 
             <div class="btn-group">
-                <button class="btn-small" id="retry-btn">Đừng nản, làm lại AE êy</button>
+                <button class="btn-small" id="retry-btn">Chơi lại</button>
                 <button class="btn-small" id="list-btn" style="border-color:#0ff; color:#0ff; max-width: 80px;">DS</button>
             </div>
         </div>
