ui: balance bottom buttons in Ready Ball game over screen

--- a/games/ready-ball/index.html
+++ b/games/ready-ball/index.html
@@ -115,7 +115,7 @@
 
             <div class="btn-group">
                 <button class="btn-small" id="retry-btn">Chơi lại</button>
-                <button class="btn-small" id="list-btn" style="border-color:#0ff; color:#0ff; max-width: 80px;">DS</button>
+                <button class="btn-small" id="list-btn" style="border-color:#0ff; color:#0ff;">DS GAME</button>
             </div>
         </div>
     </div>
