--- a/games/ready-ball/index.html
+++ b/games/ready-ball/index.html
@@ -38,10 +38,10 @@
         
         .leaderboard { margin: 15px 0; text-align: left; background: #000; padding: 12px; border-radius: 15px; border: 1px solid #222; }
         .leaderboard h3 { margin-top: 0; color: #0ff; text-align: center; border-bottom: 1px solid #222; padding-bottom: 8px; font-size: 14px; text-transform: uppercase; }
-        .leaderboard-list { list-style: none; padding: 0; margin: 0; max-height: 120px; overflow-y: auto; }
-        .leaderboard-item { display: flex; justify-content: space-between; padding: 5px 0; border-bottom: 1px solid #111; font-size: 13px; }
-        .leaderboard-item .name { color: #fff; }
-        .leaderboard-item .points { color: #0ff; font-weight: bold; }
+        .leaderboard-list { list-style: none; padding: 0; margin: 0; max-height: 120px; overflow-y: auto; overflow-x: hidden; }
+        .leaderboard-item { display: flex; justify-content: space-between; padding: 6px 5px; border-bottom: 1px solid #111; font-size: 13px; align-items: center; }
+        .leaderboard-item .name { color: #fff; flex: 1; text-align: left; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding-right: 10px; }
+        .leaderboard-item .points { color: #0ff; font-weight: bold; min-width: 45px; text-align: right; }
         
         .save-form { margin-top: 15px; display: flex; flex-direction: column; gap: 8px; }
         .save-form input { 
